upgrade: reset css

--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,14 @@ a {
 
 body {
   font-family: "Nunito", sans-serif;
-  font-weight: 500;
-  color: #252525;
+  color: #222222;
 }
 
 img {
   max-width: 100%;
   display: block;
-  border-radius: 5px;
+}
+
+p {
+  width: 300px;
 }
