--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,27 @@ img {
 p {
   width: 300px;
 }
+
+/*Super-Info*/
+.super-info-bg {
+  background: #122ab2;
+  color: white;
+}
+
+.super-info {
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+.super-info p,
+.super-info a {
+  margin: 0 10px 10px 10px;
+}
+
+.super-info a {
+  color: white;
+}
