--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,45 @@ p {
 .super-info a {
   color: white;
 }
+
+/*Menu*/
+.menu-bg {
+  background: #2c70ff;
+}
+
+.menu {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 15px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu a {
+  color: white;
+}
+
+.menu-logo a {
+  font-size: 2.25em;
+  font-weight: bold;
+  margin: 0 10px;
+}
+
+.menu-nav ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-nav a {
+  font-size: 1.25em;
+  display: block; /*Para poder influenciar no padding*/
+  padding: 10px;
+  transition: 0.3s;
+}
+
+.menu-nav a:hover {
+  color: #ed1c53;
+  font-weight: bold;
+}
