--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ img {
 }
 
 p {
-  width: 300px;
+  max-width: 350px;
 }
 
 /*Super-Info*/
@@ -93,4 +93,46 @@ p {
 .menu-nav a:hover {
   color: #ed1c53;
   font-weight: bold;
+}
+
+/*Introduction*/
+.introduction {
+  font-size: 3em;
+  line-height: 1;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 60px 10px;
+}
+
+/*About*/
+.about {
+  border-top: 2px solid #2c70ff;
+  border-bottom: 2px solid #2c70ff;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 60px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about-info {
+  flex: 2 1 300px; /*Definição de quando os conteúdos vão quebrar*/
+  margin: 0 10px;
+}
+
+.about-info h1 {
+  font-size: 3em;
+  margin-bottom: 0.5em;
+}
+
+.about-info p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  margin-bottom: 1em;
+  color: #7c7c7c;
+}
+
+.about-img {
+  flex: 1 1 160px; /*Definição de quando as imagens vão quebrar*/
+  margin: 0 10px;
 }
