--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,105 @@ p {
 .blue {
   border-top: 8px solid #66d9eb;
 }
+
+/*Price*/
+.price {
+  background: #fdfdfd;
+  padding: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.price-item {
+  flex: 1;
+  border: 4px solid white;
+  padding: 20px;
+  margin: 10px;
+  min-width: 260px;
+}
+
+.price-item h2 {
+  font-size: 3em;
+  color: #a4a4a4;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.price-item span {
+  display: block; /*Pra conseguir definir margin, width, ...*/
+  max-width: 300px;
+  margin: 20px auto;
+  text-align: center;
+  font-size: 3em;
+  font-weight: bold;
+  padding: 10px 0 5px 0;
+  border-top: 4px solid white;
+  border-bottom: 4px solid white;
+}
+
+.price-item sup {
+  font-size: 1.5rem;
+}
+
+.price-item ul {
+  max-width: 300px;
+  margin: 20px auto;
+  font-size: 1.25em;
+  line-height: 1;
+  font-style: italic;
+  color: #7c7c7c;
+}
+
+.price-item li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.price-item li::after {
+  content: "";
+  display: block;
+  width: 6px;
+  height: 6px;
+  background: #2c70ff;
+  border-radius: 50%;
+}
+
+.price-item a {
+  max-width: 300px;
+  display: block;
+  margin: 20px auto;
+  border: 4px solid #222222;
+  color: #222222;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.75em;
+  padding: 15px 0;
+  text-align: center;
+  transition: 0.3s;
+}
+
+.price-item a:hover {
+  border-color: #ed1c53;
+  background: #ed1c53;
+  color: white;
+}
+
+@media (max-width: 800px) {
+  .price {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .price .price-item:nth-child(3) {
+    /*Alterando as ordens dos planos que irá aparecer no mobile, isso pode ser alterado com flex-wrap: wrap-reverse;*/
+    order: -2;
+  }
+
+  .price .price-item:nth-child(2) {
+    /*Alterando as ordens dos planos que irá aparecer no mobile, isso pode ser alterado com flex-wrap: wrap-reverse;*/
+    order: -1;
+  }
+}
