--- a/css/style.css
+++ b/css/style.css
@@ -279,3 +279,52 @@ p {
     order: -1;
   }
 }
+
+/*Quality*/
+.quality {
+  max-width: 960px;
+  margin: 60px auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.quality-item {
+  flex: 1 1 300px;
+  margin: 20px 10px;
+}
+
+.quality-item h2 {
+  font-size: 2.25em;
+  color: #a4a4a4;
+  margin-bottom: 20px;
+}
+
+.quality-item h2::before {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 30px;
+  margin-right: 10px;
+  background: #ed1c53;
+}
+
+.quality-item:nth-of-type(3n + 1) h2::before {
+  /*(3n + 1) = Primeiro item, e o terceiro item depois dele*/
+  background: #ae81ff;
+}
+
+.quality-item:nth-of-type(3n + 2) h2::before {
+  /*(3n + 1) = Primeiro item, e o terceiro item depois dele*/
+  background: #f9265e;
+}
+
+.quality-item:nth-of-type(3n + 3) h2::before {
+  /*(3n + 1) = Primeiro item, e o terceiro item depois dele*/
+  background: #66d9eb;
+}
+
+.quality-item p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  color: #7c7c7c;
+}
