--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ p {
 .products-item h2 {
   font-size: 3em;
   color: #a4a4a4;
-  background: #fdfdfd;
+  background: #f7f7f7;
   padding: 60px 20px;
 }
 
@@ -180,7 +180,7 @@ p {
 
 /*Price*/
 .price {
-  background: #fdfdfd;
+  background: #f7f7f7;
   padding: 60px;
   display: flex;
   flex-wrap: wrap;
@@ -327,4 +327,88 @@ p {
   font-size: 1.25em;
   line-height: 1.4;
   color: #7c7c7c;
+}
+
+/*Newsletter*/
+.newsletter {
+  background-color: #f7f7f7; /*Colorindo o fundo inteiro sem precisar criar outras tags div's*/
+  padding: 60px calc((100% - 960px) / 2); /*Método pra manter o conteúdo dentro da proposta do grid sem utilizar outras div's*/
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-info {
+  flex: 1 1 240px;
+  margin: 0 10px;
+}
+
+.newsletter-info h1 {
+  font-size: 3em;
+  color: #a4a4a4;
+}
+
+.newsletter-info p {
+  font-size: 1.25em;
+  font-style: italic;
+  max-width: 230px;
+  color: #7c7c7c;
+  margin-bottom: 30px;
+}
+
+.newsletter-form {
+  flex: 2 1 260px;
+  margin: 0 10px;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input {
+  flex: 3 1 200px;
+  font-size: 1.25em;
+  color: #7c7c7c;
+  font-style: italic;
+  font-family: "Nunito";
+  border: 4px solid #2c70ff;
+  background: transparent;
+  padding: 15px 10px;
+  margin: 0;
+  border-radius: 0px;
+}
+
+.newsletter-form button {
+  flex: 1 1 150px;
+  font-family: "Nunito";
+  font-size: 1.85em;
+  font-weight: bold;
+  text-transform: uppercase;
+  background: #2c70ff;
+  color: white;
+  border: none;
+  margin: 0;
+  cursor: pointer;
+  padding: 15px 10px;
+  transition: 0.3s;
+}
+
+@media (max-width: 600px) {
+  .newsletter-form button {
+    font-size: 1.5em;
+  }
+}
+
+/*Footer*/
+.footer {
+  display: flex;
+  background-color: #2c70ff;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer p {
+  flex: 1;
+  text-align: center;
+  font-size: 1.25em;
+  color: #122ab2;
 }
