--- a/css/style.css
+++ b/css/style.css
@@ -401,14 +401,31 @@ p {
 .footer {
   display: flex;
   background-color: #2c70ff;
-  height: 100px;
+  height: 175px;
   justify-content: center;
   align-items: center;
 }
 
-.footer p {
+.footer-text,
+.footer-link {
   flex: 1;
   text-align: center;
-  font-size: 1.25em;
+  font-size: 1.125em;
   color: #122ab2;
+}
+
+.footer-text {
+  margin-bottom: 15px;
+}
+
+.footer-link a {
+  margin-left: 5px;
+  font-size: 1.2em;
+  color: white;
+  transition: 0.3s;
+}
+
+.footer-link a:hover {
+  color: #ed1c53;
+  font-weight: bold;
 }
